[project]
name = "mbbank-lib"
# version is dynamic (sourced from the package)
dynamic = ["version"]
description = "A unofficially lightweight Python API wrapper for the \"Military Commercial Joint Stock Bank\" (MBBank) personal accounts"
readme = { file = "README.MD", content-type = "text/markdown" }
requires-python = ">=3.8"
license-files = ["LICENSE"]
authors = [ { name = "The DT", email = "duongtuan30306@gmail.com" } ]
license = "MIT"

dependencies = [
    "Pillow",
    "requests",
    "aiohttp",
    "setuptools",
    "wheel",
    "wasmtime",
    "mb-capcha-ocr",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/thedtvn/MBBank"

[tool.setuptools.packages.find]
include = ["mbbank*"]

[tool.setuptools.dynamic]
version = { attr = "mbbank.__version__" }

[dependency-groups]
dev = [
    "ruff>=0.14.9" # for linting and formatting
]
